# shopmood

./: .gitignore  postgres_commands
backend/: emotion_recognition.py  main.py  pyproject.toml  stub_nltk_get_lemma_eg_angry.py
backend/db/: database.py  init_db.py  models.py  populate_db.py
backend/notebooks/: test_gpt_vqa.ipynb
frontend/app/: build.gradle
frontend/app/src/main/: AndroidManifest.xml
frontend/app/src/main/java/com/example/shopmood/: MainActivity.kt
frontend/app/src/main/java/com/example/shopmood/network/: ApiService.kt  RetrofitClient.kt
frontend/app/src/main/res/layout/: activity_main.xml
